[feature] auth:名前とパスワードの一致の確認+jwtトークンの発行の実装
