# interface/src/handler.rs
@@ -1,6 +1,7 @@
 pub mod check_health;
 pub mod delete_article;
 pub mod list_article;
+pub mod login_as_owner;
 pub mod post_article;
 pub mod read_article;
 pub mod update_article;
