# swagger/OpenApi.yml
@@ -31,7 +31,6 @@ paths:
         - article
       summary: 記事を投稿する
       requestBody:
-        description: Request Body
         content:
           application/json: 
             schema:
@@ -40,17 +39,31 @@ paths:
       responses:
         '200':
           description: OK
+  /login:
+    get:
+      tags:
+        - auth
+      summary: ownerとしてログインする
+      requestBody:
+        content:
+          application/json: 
+            schema:
+              $ref: '#/components/schemas/LoginAsOwner'
+        required: true
+      responses:
+        '200':
+          description: OK
+  /article/{articleID}:
     get:
       tags:
         - article
       summary: 記事を1つ取得する
-      requestBody:
-        description: Request Body
-        content:
-          application/json: 
-            schema:
-              $ref: '#/components/schemas/ReadArticle'
-        required: true
+      parameters:
+        - in: path
+          name: articleID
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           description: OK
@@ -58,13 +71,12 @@ paths:
       tags:
         - article
       summary: 記事を削除する
-      requestBody:
-        description: Request Body
-        content:
-          application/json: 
-            schema:
-              $ref: '#/components/schemas/DeleteArticle'
-        required: true
+      parameters:
+        - in: path
+          name: articleID
+          schema:
+            type: string
+          required: true
       responses:
         '200':
           description: OK
@@ -72,8 +84,13 @@ paths:
       tags:
         - article
       summary: 記事を更新する
+      parameters:
+        - in: path
+          name: articleID
+          schema:
+            type: string
+          required: true
       requestBody:
-        description: Request Body
         content:
           application/json: 
             schema:
@@ -82,13 +99,13 @@ paths:
       responses:
         '200':
           description: OK
+
   /articles:
     get:
       tags:
         - articles
       summary: 複数の記事の要約情報を取得する
       requestBody:
-        description: Request Body
         content:
           application/json: 
             schema:
@@ -115,21 +132,9 @@ components:
             type: string
         is_public:
           type: boolean
-    ReadArticle:
-      type: object
-      properties:
-        id:
-          type: string
-    DeleteArticle:
-      type: object
-      properties:
-        id:
-          type: string
     UpdateArticle:
       type: object
       properties:
-        id:
-          type: string
         title:
           type: string
         subtitle:
@@ -142,6 +147,13 @@ components:
             type: string
         is_public:
           type: boolean
+    LoginAsOwner:
+      type: object
+      properties:
+        name:
+          type: string
+        passwd:
+          type: string
     ListArticle:
       type: object
       properties:
